syntax = "proto3";

option csharp_namespace = "gRoom.gRPC.Messages";
package groom;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message RoomRegistrationRequest {
    string room_name = 1;
    string user_name = 2;
}

message RoomRegistrationResponse {
  //int32 RoomId = 1;
    bool joined = 1;
}

message ChatMessage{
  google.protobuf.Timestamp msg_time = 1;
  string contents = 2;
  string user = 3;
  string room = 4;
}

// 등록 서비스
service Groom {
  // 클라이언트가 요청하면, 번호를 할당 반환합니다.
  rpc RegisterToRoom(RoomRegistrationRequest) returns (RoomRegistrationResponse);
  // 양방향 스트림
  rpc StartChat(stream ChatMessage) returns (stream ChatMessage);
}